--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "mysql": "^2.17.1",
     "protobufjs": "^6.8.8",
     "redis": "^2.8.0",
+    "stickpackage": "^3.1.2",
     "ws": "^7.1.2"
   }
 }
