第三方修改增加 d.ts,方便导入

--- a/package.json
+++ b/package.json
@@ -26,5 +26,8 @@
     "redis": "^2.8.0",
     "stickpackage": "^3.1.2",
     "ws": "^7.1.2"
+  },
+  "devDependencies": {
+    "@types/node": "^12.11.7"
   }
 }
