--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "game_server",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "directories": {
     "test": "test"
@@ -20,6 +19,8 @@
   },
   "homepage": "https://github.com/huangshucheng/game_server#readme",
   "dependencies": {
+    "@types/mysql": "^2.15.7",
+    "@types/ws": "^6.0.3",
     "express": "^4.17.1",
     "mysql": "^2.17.1",
     "protobufjs": "^6.8.8",
@@ -29,5 +30,6 @@
   },
   "devDependencies": {
     "@types/node": "^12.11.7"
-  }
+  },
+  "description": ""
 }
